# yuukeiV2

./: .gitignore  01-concept.md  02-architecture.md  03-protocols.md  04-event-log-and-memory.md  05-world-pack-and-daihon.md  06-build-guidance-for-codex.md  07-initial-implementation-prompt.md  08-daihon-language-reference.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  THIRD-PARTY-LICENSES.md  USERGUIDE.md  biome.json  license-inventory.md  package.json  pnpm-lock.yaml  windows-verification.md
.claude/: settings.json
.claude/skills/codex/: SKILL.md
.yuukei-patch-backups/20260711-182051-yuukei-drag-start-race-fix-v1/apps/desktop/src/: pointerGesture.ts
apps/cli/: Cargo.toml
apps/cli/src/: main.rs  menu.rs
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/.claude/skills/verify/: SKILL.md
apps/desktop/src/: ActorApp.test.ts  ActorApp.tsx  ActorBubbleLayer.test.tsx  ActorBubbleLayer.tsx  App.test.tsx  App.tsx  ConversationComposer.test.tsx  ConversationComposer.tsx  DaihonDiagnosticsPanel.tsx  EventLogSettingsPanel.tsx  ExtensionSettingsPanel.tsx  MemorySettingsPanel.tsx  ObservationToggle.tsx  OnboardingFlow.tsx  StageOverlayApp.test.tsx  StageOverlayApp.tsx  StartupErrorApp.test.tsx  StartupErrorApp.tsx  actorBubbleLayout.ts  actorHitZones.ts  appShared.ts  main.tsx  pointerGesture.test.ts  pointerGesture.ts  pointerGestureSemanticQueue.test.ts  pointerGestureSemanticQueue.ts  stageBubbleLayout.test.ts  stageBubbleLayout.ts  styles.css  yuukeiClient.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: audio_player.rs  desktop_stage.rs  idle_observer.rs  lib.rs  main.rs  power_observer.rs  window_observer.rs
apps/desktop/src-tauri/src/desktop_stage/: drag.rs  geometry.rs  layout.rs  mod.rs  tests.rs  walk.rs  windows.rs  windows_caption.rs
crates/daihon-core/: Cargo.toml
crates/daihon-core/src/: diagnostic.rs  inspect.rs  lexer.rs  parser.rs  runtime.rs  span.rs  token.rs  validate.rs  variable.rs
crates/daihon-core/tests/: daihon_core.rs
crates/yuukei-capability/: Cargo.toml
crates/yuukei-capability/src/: lib.rs
crates/yuukei-daihon/: Cargo.toml
crates/yuukei-daihon/src/: ast.rs  function.rs  inspect.rs  lexer.rs  lib.rs  parser.rs  runtime.rs  validate.rs  value.rs  variable.rs
crates/yuukei-daihon/tests/: yuukei_daihon.rs
crates/yuukei-device-host/: Cargo.toml
crates/yuukei-device-host/src/: app_logger.rs  bootstrap.rs  capability_usage.rs  desktop_observation.rs  event_builders.rs  extension_settings.rs  lib.rs  life_rhythm.rs  paths.rs  runtime.rs  runtime_settings_api.rs  settings.rs  surface_assets.rs  tests.rs  world_pack_import.rs  world_pack_registry.rs
crates/yuukei-event-log/: Cargo.toml
crates/yuukei-event-log/src/: lib.rs
crates/yuukei-extension/: Cargo.toml
crates/yuukei-extension/src/: lib.rs
crates/yuukei-protocol/: Cargo.toml
crates/yuukei-protocol/src/: lib.rs
crates/yuukei-resident-home/: Cargo.toml
crates/yuukei-resident-home/src/: choice.rs  dialogue.rs  event_flow.rs  event_log_admin.rs  extensions.rs  lib.rs  memory.rs  metrics.rs  mood.rs  speech.rs  tests.rs
crates/yuukei-world/: Cargo.toml
crates/yuukei-world/src/: lib.rs
docs/superpowers/plans/: 2026-07-12-desktop-conversation-input.md
docs/superpowers/specs/: 2026-07-12-desktop-conversation-input-design.md
docs/user/: 01-world-pack-guide.md  02-daihon-guide.md  03-extension-guide.md  04-testing-and-distribution.md  README.md
packs/default-yuukei/: pack.json
packs/default-yuukei/motion/: drop_land.vrma  drop_recover.vrma  grab_hold.vrma  grab_start.vrma  idle_breathe.vrma  idle_look_around.vrma  idle_weight_shift.vrma  pat_react.vrma  perch_idle.vrma  perch_sit_down.vrma  perch_stand_up.vrma  poke_react.vrma  sleep_enter.vrma  sleep_loop.vrma  talk_small.vrma  wake_up.vrma  walk.vrma  wave.vrma  yuukei-release-motions.qa.json
packs/default-yuukei/scripts/: conversation_fallback.daihon  daily_life.daihon  desktop_reactions.daihon  downloads.daihon  folder_encounters.daihon  presence_away.daihon  presence_return.daihon  random_talk.daihon  window_perch.daihon
packs/demo-interpret/: pack.json
packs/demo-interpret/scripts/: interpret_demo.daihon
tools/: codex-bridge.mjs  generate-third-party-licenses.mjs
tools/blender/: create_release_vrma.py
