[workspace]
members = [
    "crates/yuukei-capability",
    "crates/yuukei-device-host",
    "crates/yuukei-event-log",
    "crates/yuukei-protocol",
    "crates/yuukei-resident-home",
    "crates/yuukei-world",
    "apps/cli",
    "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "UNLICENSED"
repository = "https://example.invalid/yuukei"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.11"
tempfile = "3.13"
thiserror = "1.0"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "sync"] }
ts-rs = { version = "10.1", features = ["serde-compat"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
