[package]
name = "yuukei-capability"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
yuukei-protocol = { path = "../yuukei-protocol" }

[dev-dependencies]
tokio.workspace = true

