[package]
name = "yuukei-device-host"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
yuukei-event-log = { path = "../yuukei-event-log" }
yuukei-protocol = { path = "../yuukei-protocol" }
yuukei-resident-home = { path = "../yuukei-resident-home" }
yuukei-world = { path = "../yuukei-world" }

[dev-dependencies]
tempfile.workspace = true
