[package]
name = "yuukei-device-host"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
yuukei-capability = { path = "../yuukei-capability" }
yuukei-event-log = { path = "../yuukei-event-log" }
yuukei-extension = { path = "../yuukei-extension" }
yuukei-protocol = { path = "../yuukei-protocol" }
yuukei-resident-home = { path = "../yuukei-resident-home" }
yuukei-world = { path = "../yuukei-world" }

[dev-dependencies]
tempfile.workspace = true
notify.workspace = true
