[package]
name = "yuukei-event-log"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
yuukei-protocol = { path = "../yuukei-protocol" }

[dev-dependencies]
tempfile.workspace = true

