[package]
name = "yuukei-extension"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
yuukei-protocol = { path = "../yuukei-protocol" }
yuukei-capability = { path = "../yuukei-capability" }
