[package]
name = "yuukei-protocol"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
ts-rs.workspace = true
uuid.workspace = true

[dev-dependencies]
anyhow.workspace = true

