[package]
name = "yuukei-resident-home"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
yuukei-capability = { path = "../yuukei-capability" }
yuukei-event-log = { path = "../yuukei-event-log" }
yuukei-extension = { path = "../yuukei-extension" }
yuukei-protocol = { path = "../yuukei-protocol" }
yuukei-world = { path = "../yuukei-world" }

[dev-dependencies]
async-trait.workspace = true
tempfile.workspace = true
