[package]
name = "yuukei-world"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
yuukei-daihon = { path = "../yuukei-daihon" }
yuukei-protocol = { path = "../yuukei-protocol" }

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
