[package]
name = "yuukei-desktop"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
name = "yuukei_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "yuukei-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
rodio = "0.20"
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2.2.0", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-dialog = "2.2.0"
tokio.workspace = true
yuukei-device-host = { path = "../../../crates/yuukei-device-host" }
yuukei-protocol = { path = "../../../crates/yuukei-protocol" }
yuukei-resident-home = { path = "../../../crates/yuukei-resident-home" }
yuukei-world = { path = "../../../crates/yuukei-world" }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "block2"] }
objc2-foundation = { version = "0.3", features = ["NSNotification", "NSObject", "NSOperation", "NSString", "block2"] }

[dev-dependencies]
tempfile.workspace = true
