[package]
name = "yuukei-desktop"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
name = "yuukei_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "yuukei-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
chrono.workspace = true
notify.workspace = true
rodio = "0.20"
tauri-plugin-autostart = "2"
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2.2.0", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-dialog = "2.2.0"
tokio.workspace = true
uuid.workspace = true
yuukei-device-host = { path = "../../../crates/yuukei-device-host" }
yuukei-protocol = { path = "../../../crates/yuukei-protocol" }
yuukei-resident-home = { path = "../../../crates/yuukei-resident-home" }
yuukei-world = { path = "../../../crates/yuukei-world" }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
core-foundation = "0.10"
core-graphics = "0.25"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSRunningApplication", "NSWorkspace", "block2"] }
objc2-foundation = { version = "0.3", features = ["NSNotification", "NSObject", "NSOperation", "NSString", "block2"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_System_Ole",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_System_Variant",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile.workspace = true
